# readings

./: 404.html  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: documentation.yml
docs/: applications-of-lagrange-multipliers.md  gumbel_softmax.md  index.md  memorize-sherman-morrison-formula.md  on-companion-matrices.md  on-lagrange-multipliers-proof.md  why_krylov_subspace.md
docs/stochastic-calculus/: simple.md
gumbel_softmax/: index.html
memorize-sherman-morrison-formula/: index.html
notes/: memorize-sherman-morrison-formula.md
on-companion-matrices/: index.html
on-lagrange-multipliers-proof/: index.html
search/: search_index.json
stochastic-calculus/simple/: index.html
why_krylov_subspace/: index.html
